add style rules to the Work card

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -379,7 +379,7 @@ ul.row {
     left: 0;
     content: "";
 }
-.card-work:hover .cart-title {
+.card-work:hover .card-title {
     opacity: 1;
 }
 
